src/objects/Purchase_Order__c.object
<CustomObject>
    <description>Placeholder for working with synchronizing purchase orders between Salesforce and Oracle eBS</description>
    <fields>
        <fullName>Cancel_Flag__c</fullName>
        <description>Cancel or null</description>
        <label>Cancel Flag</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_From__c</fullName>
        <description>AMPS or OU_ID</description>
        <label>Converted From</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency Code</description>
        <label>Currency</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_ID__c</fullName>
        <description>Organizational Unit</description>
        <label>Org ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Project Number - PO Number</description>
        <externalId>true</externalId>
        <label>PO Number</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Terms_Code__c</fullName>
        <label>Payment Terms Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revision_Number__c</fullName>
        <label>Revision Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Site_Code__c</fullName>
        <label>Vendor Site Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>xxPurchase Order</label>
    <nameField>
        <label>Purchase Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>xxPurchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>